<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_data"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mk_nma"
                    android:inputType="textPersonName"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_telp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mk_notelp"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="@string/mk_email"
                    android:inputType="textEmailAddress"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/editalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mk_alamat"
                    android:inputType="textPersonName"
                    />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center"
            >
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="run"
                android:text="@string/simpan"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="OnClick" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>